--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,17 @@ p {
   margin: 0 2% 20px;
 }
 
+@media (max-width: 767px) {
+  .one-half {
+    width: 96%;
+  }
+}
 @media (min-width: 768px) {
   .container{
     width: 750px;
+  }
+  .one-half {
+    width: 46%;
   }
 }
 @media (min-width: 992px) {
@@ -121,6 +129,8 @@ header .hero {
  header .hero img {
    display: block;
    margin: 3em auto 0;
+   max-width: 100%;
+   height: auto;
  }
 
 /* BUTTONS */
@@ -133,4 +143,25 @@ header .hero {
   background-color: #F9A108;
   border: 2px solid #F9A108;
   box-shadow: 0px 2px 0px 0px #CA6E03;
+}
+
+@media (max-width:767px) {
+  .btn {
+    padding: 5px 15px;
+  }
+  header nav {
+    padding: 1em 0;
+    text-align: center;
+  }
+  header nav ul {
+    display: inline;
+    text-align: center;
+    float: none;
+  }
+  header .hero h1 {
+    font-size: 36px;
+  }
+  header .hero p {
+    font-size: 16px;
+  }
 }
