--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,9 @@ header .hero {
   font-size: 12px;
   color: #FEFEFE;
   line-height: 15px;
-  font-style:italic;
+  font-style: italic;
+  position: relative;
+  top: 50px;
 }
 
 /* TESTIMONIALS */
@@ -310,10 +312,14 @@ header .hero {
   display: inline-block;
   margin: 20px 10px 0 0;
 }
-.testimonials p.name {
+.testimonials p .name {
   float: left;
   display: inline-block;
   text-align: left;
   font-size: 13px;
   margin-top: 30px;
+}
+.staggered-test {
+  position: relative;
+  top: 20px;
 }
