--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ header .hero {
 /* BENEFITS */
 .benefits {
   text-align: center;
-  display: block;
+  display: flex;
   position: relative;
 }
 .benefits ul {
@@ -210,6 +210,7 @@ header .hero {
   list-style-type: none;
 }
 .box {
+  display: inline-block;
   padding:0 15px 15px;
   background: #FFFFFF;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
@@ -267,7 +268,9 @@ header .hero {
   color: #FEFEFE;
   line-height: 15px;
   font-style: italic;
+  top: 20px;
   position: relative;
+  clear: both;
 }
 
 /* TESTIMONIALS */
