--- a/css/dropit.css
+++ b/css/dropit.css
@@ -16,7 +16,7 @@
   display: inline-block;
 }
 .dropit .dropit-trigger { position: relative; }
-.dropit .dropit-submenu {
+.header .dropit .dropit-submenu {
     position: absolute;
     top: 100%;
     right: 0; /* dropdown left or right */
@@ -25,6 +25,17 @@
     min-width: 100px;
     list-style: none;
 	padding: 20px;
+	margin: 20px 0 0;
+}
+.settings .dropit .dropit-submenu {
+    position: absolute;
+    bottom: 100%;
+    right: 0; /* dropdown left or right */
+    z-index: 1000;
+    display: none;
+    min-width: 160px;
+    list-style: none;
+	padding: 15px 10px;
 	margin: 20px 0 0;
 }
 .dropit .dropit-open .dropit-submenu {
@@ -45,6 +56,19 @@
   top: -8px;
   right: 10px;
  }
+ .settings .dropit .dropit-open .dropit-submenu:after {
+   content: " ";
+   position: absolute;
+   border-style: solid;
+   border-width: 0 8px 8px;
+   border-color: #FFFFFF transparent;
+   display: block;
+   width: 0;
+   z-index: 1;
+   top: 108px;
+   right: 10px;
+   transform: rotate(180deg);
+  }
  .dropit .dropit-open .dropit-submenu li {
   display: block;
   margin-bottom: 20px;
